--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -39,8 +39,8 @@ body {
 // Page styles
 //---------------------------------------
 .page-content {
-  padding-top: rem(64px);
-  padding-bottom: rem(64px);
+  padding-top: rem(80px);
+  padding-bottom: rem(104px);
 
   // All paragraphs on Markdown pages
   // And divs when markdown doesn't wrap text in paragraphs (when you have to use html for links to open in a new window)
